--- a/src/components/MemoryGame.css
+++ b/src/components/MemoryGame.css
@@ -37,6 +37,7 @@
     max-width: 100%;
     border-radius: 10px;
     overflow: hidden;
+    background: url("../assets/fronte.jpeg") no-repeat center center;
     cursor: pointer;
     perspective: 1000px;
     position: relative;
@@ -51,9 +52,8 @@
   .card img {
     width: 100%;
     height: 100%;
-    background: url("../assets/fronte.jpeg") no-repeat center center;
     object-fit: contain; /* non taglia l'immagine */
-    background: white;   /* per riempire gli spazi vuoti */
+     /* per riempire gli spazi vuoti */
     border-radius: 10px;
   }
   
@@ -83,7 +83,7 @@
   }
   
   .scoreboard p {
-    background: rgba(226, 226, 226, 0.5); /* sfondo semi-trasparente */
+    background: rgba(226, 226, 226, 0.688); /* sfondo semi-trasparente */
     padding: 10px 20px;
     border-radius: 10px;
     text-align: center;
@@ -102,7 +102,7 @@
   }
   
   
-/*   .turno {
+  .turno {
     color: black;
     background: rgba(226, 226, 226, 0.5); 
     padding: 0px 12px;
@@ -110,4 +110,4 @@
     text-align: center;
     font-weight: bold;
     font-size: 1rem;
-  } */
+  }
